--- a/src/main/webapp/WEB-INF/pages/style.css
+++ b/src/main/webapp/WEB-INF/pages/style.css
@@ -39,9 +39,13 @@ th
     border-width: 1px 2px 1px 2px;
     text-align: center;
 }
-#cancel, #submit
+.bigbutton
 {
     height: 32px;
     width: 240px;
     margin: 20px;
+}
+.hidden
+{
+    display: none;
 }
